samples/_failures_safe/1761711164_8742ab_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_dc15b242.c: In function ‘print_shortest_paths’:
./samples/SAFE/__tmp_dc15b242.c:168:12: error: missing terminating " character
  168 |     printf("Shortest paths from node
      |            ^~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_dc15b242.c:168:5: error: expected expression at end of input
  168 |     printf("Shortest paths from node
      |     ^~~~~~
./samples/SAFE/__tmp_dc15b242.c:168:5: error: expected declaration or statement at end of input
